phase1/learnings/Day13/linux/07-cmds.txt
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# ls
a.out                hello_2students_oops.cpp     hello_2students_v2.cpp  hello_student.cpp
hello_2students.cpp  hello_2students_oops_v2.cpp  hello_name.cpp          hello_world.cpp
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# cp hello_2students_v2.cpp hello_students.cpp
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# vim hello_students.cpp

[1]+  Stopped                 vim hello_students.cpp
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# vim hello_students.cpp
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# cat -n hello_students.cpp
     1  #include <iostream>
     2  #include <cstdlib>
     3  using std::cout;
     4  using std::cin;
     5  using std::endl;
     6
     7  void student_read(int& id, char name[]);
     8  void student_print(int& id, char name[]);
     9
    10  int main() {
    11          int N;
    12          cout << "Number of Students:"; cin >> N;
    13
    14          int ids[N];
    15          char names[N];
    16
    17          for(int I = 0; I < N; I++) {
    18                  cout << "Enter " << (I+1) << " th student details." << endl;  student_read(ids[I], names[I]);
    19          }
    20
    21
    22          for(int I = 0; I < N; I++) {
    23                  student_print(ids[I], names[I]);
    24          }
    25
    26          return EXIT_SUCCESS;
    27  }
    28
    29  void student_read(int& id, char name[]) {
    30          cout << "Enter id:";
    31          cin >> id;
    32          cout << "Enter name:";
    33          cin >> name;
    34  }
    35
    36  void student_print(int& id, char name[]) {
    37          cout << "Hello " << name << " of id " << id << "!!!" << endl;
    38  }
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# g++ hello_students.cpp
hello_students.cpp: In function ‘int main()’:
hello_students.cpp:18:107: error: invalid conversion from ‘char’ to ‘char*’ [-fpermissive]
   18 |                 cout << "Enter " << (I+1) << " th student details." << endl;  student_read(ids[I], names[I]);
      |                                                                                                    ~~~~~~~^
      |                                                                                                           |
      |                                                                                                           char
hello_students.cpp:7:33: note:   initializing argument 2 of ‘void student_read(int&, char*)’
    7 | void student_read(int& id, char name[]);
      |                            ~~~~~^~~~~~
hello_students.cpp:23:46: error: invalid conversion from ‘char’ to ‘char*’ [-fpermissive]
   23 |                 student_print(ids[I], names[I]);
      |                                       ~~~~~~~^
      |                                              |
      |                                              char
hello_students.cpp:8:34: note:   initializing argument 2 of ‘void student_print(int&, char*)’
    8 | void student_print(int& id, char name[]);
      |                             ~~~~~^~~~~~
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# vim hello_students.cpp
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# g++ hello_students.cpp
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp# ./a.out
Number of Students:3
Enter 1 th student details.
Enter id:1001
Enter name:Ayisha
Enter 2 th student details.
Enter id:1002
Enter name:Athira
Enter 3 th student details.
Enter id:1003
Enter name:Venkatesh
Hello Ayisha of id 1001!!!
Hello Athira of id 1002!!!
Hello Venkatesh of id 1003!!!
root@DESKTOP-E9TJ2O1:/mnt/c/mywork/source/c2512/phase1/learnings/Day13/cpp#